hw12/hw.output
Grammar

    0 $accept: res $end

    1 res: D STOP

    2 D: D OR C
    3  | C

    4 C: C AND L
    5  | L

    6 L: VAR
    7  | NOT VAR
    8  | LP D RP


Terminals, with rules where they appear

$end (0) 0
error (256)
OR (258) 2
AND (259) 4
NOT (260) 7
LP (261) 8
RP (262) 8
VAR (263) 6 7
STOP (264) 1


Nonterminals, with rules where they appear

$accept (10)
    on left: 0
res (11)
    on left: 1, on right: 0
D (12)
    on left: 2 3, on right: 1 2 8
C (13)
    on left: 4 5, on right: 2 3 4
L (14)
    on left: 6 7 8, on right: 4 5


State 0

    0 $accept: . res $end

    NOT  shift, and go to state 1
    LP   shift, and go to state 2
    VAR  shift, and go to state 3

    res  go to state 4
    D    go to state 5
    C    go to state 6
    L    go to state 7


State 1

    7 L: NOT . VAR

    VAR  shift, and go to state 8


State 2

    8 L: LP . D RP

    NOT  shift, and go to state 1
    LP   shift, and go to state 2
    VAR  shift, and go to state 3

    D  go to state 9
    C  go to state 6
    L  go to state 7


State 3

    6 L: VAR .

    $default  reduce using rule 6 (L)


State 4

    0 $accept: res . $end

    $end  shift, and go to state 10


State 5

    1 res: D . STOP
    2 D: D . OR C

    OR    shift, and go to state 11
    STOP  shift, and go to state 12


State 6

    3 D: C .
    4 C: C . AND L

    AND  shift, and go to state 13

    $default  reduce using rule 3 (D)


State 7

    5 C: L .

    $default  reduce using rule 5 (C)


State 8

    7 L: NOT VAR .

    $default  reduce using rule 7 (L)


State 9

    2 D: D . OR C
    8 L: LP D . RP

    OR  shift, and go to state 11
    RP  shift, and go to state 14


State 10

    0 $accept: res $end .

    $default  accept


State 11

    2 D: D OR . C

    NOT  shift, and go to state 1
    LP   shift, and go to state 2
    VAR  shift, and go to state 3

    C  go to state 15
    L  go to state 7


State 12

    1 res: D STOP .

    $default  reduce using rule 1 (res)


State 13

    4 C: C AND . L

    NOT  shift, and go to state 1
    LP   shift, and go to state 2
    VAR  shift, and go to state 3

    L  go to state 16


State 14

    8 L: LP D RP .

    $default  reduce using rule 8 (L)


State 15

    2 D: D OR C .
    4 C: C . AND L

    AND  shift, and go to state 13

    $default  reduce using rule 2 (D)


State 16

    4 C: C AND L .

    $default  reduce using rule 4 (C)
